# fastapi_assignment

./: .env  main.py  pyproject.toml
app/configs/: base.py  database.py
app/models/: likes.py  movies.py  reviews.py  users.py
app/routers/: likes.py  movies.py  reviews.py  users.py
app/schemas/: likes.py  movies.py  reviews.py  users.py
app/utils/: auth.py  file.py  jwt.py
dbschema/: default.gel
dbschema/migrations/: 00001-m1rs3yl.edgeql  00002-m1mvico.edgeql
