[project]
name = "fastapi-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "209512",email = "209512mon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aerich (>=0.9.1,<0.10.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "tortoise-orm[asyncmy] (>=0.25.1,<0.26.0)",
    "edgedb (>=2.2.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
